fixed spacing on social links

--- a/website/css/enabled_style.css
+++ b/website/css/enabled_style.css
@@ -1242,7 +1242,7 @@ a.facebook:hover {
 
 a.footer-social {
 	text-indent: -9999px;
-    margin: 5px 10px 0 0;
+    margin: 5px 5px 0 0;
     float: left;
     background-size: 30px 30px;
     background-repeat: no-repeat;
